--- a/index.html
+++ b/index.html
@@ -4,9 +4,81 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tamires Santos | Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  <div class="container">
+    <section id="about">
+      <h1>Hi there! I'm <span>Tamires Santos.</span></h1>
+      <p>I’m a self taught web developer studying to be a full stack JavaScript developer. I’m currently learning CSS, JavaScript and NodeJS. Here you can see some of my projects and follow me on my journey. 🚀</p>
+    </section>
+
+    <section id="projects">
+      <h2>Projects</h2>
+
+      <div class="projects">
+        <div class="project">
+          <img src="img/launchbase_projects.jpg" alt="Launchbase Projects Portfolio">
+          <div class="project-text">
+            <h4>Launchbase Projects</h4>
+            <p>
+              All the awesome projects developed for the Launchbase bootcamp.
+            </p>
+          </div>
+        </div>
+        <div class="project">
+          <img src="img/be_the_hero.jpg" alt="App Be The Hero">
+          <div class="project-text">
+            <h4>BeTheHero</h4>
+            <p>
+              An application that connects people with ONGs. Mobile and web versions developed during the Semana OmniStack 11 with NodeJS, ReactJS and React Native.
+            </p>
+          </div>
+        </div>
+        <div class="project">
+          <img src="img/edge.jpg" alt="EdgeLedger">
+          <div class="project-text">
+            <h4>EdgeLedger</h4>
+            <p>
+              Web site template for companies. Developed as a project for the Modern HTML & CSS From The Beginning (Including Sass) course.
+            </p>
+          </div>
+        </div>
+        <div class="project">
+          <img src="img/news.jpg" alt="News Grid Web Site">
+          <div class="project-text">
+            <h4>NewsGrid</h4>
+            <p>
+              Template for a news web site. Developed as a project for the Modern HTML & CSS From The Beginning (Including Sass) course.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+  </div>
+
+  <footer>
+    <div class="container">
+      <h2>
+        Like what you see? 
+      </h2>
+      <p>
+        So, come and say hi.
+      </p>
+      
+      <div class="links">
+        <a href="#"><img src="img/instagram.svg" alt=""></a>
+        <a href="#"><img src="img/youtube.svg" alt=""></a>
+        <a href="#"><img src="img/github.svg" alt=""></a>
+        <a href="#"><img src="img/linkedin.svg" alt=""></a>
+        <a href="#"><img src="img/email.svg" alt=""></a>
+      </div>
+    </div>
+
+  </footer>
   
 </body>
 </html>
